--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,130 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+* { 
+  margin: 0;
+}
+
+section {
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  /* align-content: space-between; */
+  /* justify-content: space-between; */
+  margin-bottom: 5vh;
+}
+
+section > div {
+  flex: 1;
+}
+
+.downArrow {
+  height: 6rem;
+  width: auto;
+}
+
+.portrait {
+  /* filter: sepia(50%); */
+  /* max-width: 20%; */
+  max-height: 30vh;
+  width: auto;
+  /* height: auto; */
+}
+
+h1 {
+  text-transform: uppercase;
+  font-family: 'Helvetica Neue', Geneva, Tahoma, sans-serif;
+  font-weight: 400;
+  font-size: 6rem;
+  line-height: 1;
+}
+
+.header-left > h1 {
+  text-align: left;
+  max-width: 70%;
+}
+
+.header-right > h1 {
+  text-align: right;
+  max-width: 90%;
+  margin-left: auto;
+}
+
+.hero-bottom {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+  /* flex-direction: column; */
+  /* margin-top: auto; */
+  /* align-content: flex-end; */
+}
+
+.hero-bottom > * {
+  margin-top: auto;
+}
+
+nav {
+  height: 5vh;
+  font-family: 'Josefin Slab', serif;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  background-color: #D4D2CE;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+nav > * {
+  align-content: space-between;
+  text-decoration: none;
+  font-size: 1.25rem;
+  color: #000;
+  font-weight: 700;
+  padding: 10px;
+}
+
+#about-paragraph {
+  margin-top: -20px;
+  margin-bottom: 20px;
+}
+
+#contact > * {
+  font-family: 'Courier New', Courier, monospace;
+}
+
+#contact a {
+  padding: 10px 0;
+  font-weight: 700;
+  color: #000;
+  text-decoration: underline;
+}
+
+.expand {
+  position: relative;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.expand:after {
+  display: block;
+  content: '';
+  border-bottom: solid 2px #000;
+  transform: scaleX(0);
+  transition: transform 200ms ease-in-out;
+  transform-origin: 0;
+}
+
+.expand:hover:after {
+  transform: scaleX(1);
+  transform-origin: 0;
+}
+
+.portfolio-grid {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
