--- a/src/PortfolioCard.css
+++ b/src/PortfolioCard.css
@@ -2,10 +2,14 @@
   width: calc(23.9vh * 2);
   height: calc(10vh * 2);
   border: 3px solid #000;
+  display: flex;
+  justify-content: center;
+  background-color: rgba(0, 32, 36, 1);
 }
 
 img {
-  width: calc(23.9vh * 2);
+  width: auto;
+  text-align: center;
   height: calc(10vh * 2);
   filter: grayscale(50%) brightness(0.7);
 }
