--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ h1 {
 }
 
 .hero-bottom {
-  margin-top: -20vh;
+  /* margin-top: -20vh; */
   display: flex;
   flex: 1;
   justify-content: space-between;
