--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #D4D2CE;
-  margin: 0 5%;
+  background-color: #EDF2F3;
+  margin: 0;
 }
 
 code {
