--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ h1 {
   max-width: 70%;
 }
 
-.header-right>h1 {
+.header-right {
   text-align: right;
   max-width: 90%;
   margin-left: auto;
@@ -83,9 +83,9 @@ h1 {
   display: flex;
   flex: 1;
   justify-content: space-between;
-  animation-name: slide-in;
-  animation-duration: 1.25s;
-  animation-timing-function: ease-out;
+  /* animation-name: slide-in; */
+  /* animation-duration: 1.25s; */
+  /* animation-timing-function: ease-out; */
 }
 
 .hero-bottom>* {
