--- a/src/index.css
+++ b/src/index.css
@@ -81,9 +81,14 @@ h1 {
   margin: 0 5%;
 }
 
-/* .hero-center {
-  animation: center 1s ease-in;
-} */
+#bio {
+  animation: fadeIn 5s;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
 
 .hero-bottom {
   display: flex;
